Bug 797649 - Truncate URLs logged in --DOMWINDOW. r=bz